Implement switcher view

--- a/keymaps/atom-project-switcher.json
+++ b/keymaps/atom-project-switcher.json
@@ -3,6 +3,6 @@
     "ctrl-alt-shift-p": "atom-project-switcher:activate"
   },
   "atom-text-editor.vim-mode-plus:not(.insert-mode), .tree-view, .results-view": {
-    ", p p": "atom-project-switcher:activate"
+    ", p p": "atom-project-switcher:switch-project"
   }
 }
